[package]
name = "pl-00-intro"
version = "0.1.0"
edition = "2021"

[dependencies]
lightning = { version = "0.0.125", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.125", features = [ "rpc-client", "tokio" ] }
lightning-net-tokio = { version = "0.0.125" }
bitcoin = "0.32"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "full" ] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
hex = "0.4.3"
sha2 = "0.10.8"
clap = { version = "4.4", features = ["derive"] }
ripemd = "0.1"

[build-dependencies]
syn = { version = "1.0.107", features = ["parsing", "full","extra-traits"] }

[lib]
doctest = false